config-adp/v12.1.0.1-local/03-ibm-datapower-operator.yaml
---
# Source: datapower-operator/templates/operator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: datapower-operator
  labels:
    app.kubernetes.io/instance: datapower-operator
    app.kubernetes.io/name: datapower-operator
    app.kubernetes.io/managed-by: datapower-operator
spec:
  replicas: 1
  selector:
    matchLabels:
      name: datapower-operator
      app.kubernetes.io/instance: datapower-operator
      app.kubernetes.io/name: datapower-operator
      app.kubernetes.io/managed-by: datapower-operator
  template:
    metadata:
      labels:
        name: datapower-operator
        app.kubernetes.io/instance: datapower-operator
        app.kubernetes.io/name: datapower-operator
        app.kubernetes.io/managed-by: datapower-operator
      annotations:
        productID: "64a541a8e6d44869ba790cbafb937f7a"
        productName: "IBM DataPower Operator"
        productMetric: "FREE"
        productChargedContainers: ""
        productVersion: 1.17.0
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: "kubernetes.io/arch"
                operator: In
                values: ["amd64"]
      topologySpreadConstraints:
      - maxSkew: 1
        topologyKey: topology.kubernetes.io/zone
        whenUnsatisfiable: ScheduleAnyway
        labelSelector:
          matchLabels:
            app.kubernetes.io/instance: datapower-operator
            app.kubernetes.io/name: datapower-operator
            app.kubernetes.io/managed-by: datapower-operator
      hostNetwork: false
      hostPID: false
      hostIPC: false
      serviceAccountName: datapower-operator
      containers:
        - name: datapower-operator
          # Replace this with the built image name
          image: harbor.talos.zebra-cloud.net/apic/datapower-operator:1.17.0
          command:
          - /datapower-operator
          args:
          - "--leader-elect"
          - "--zap-encoder=json"
          - "--zap-log-level=info"
          - "--zap-time-encoding=rfc3339nano"
          imagePullPolicy: Always
          volumeMounts:
          - mountPath: /opt/ibm/datapower/operator
            name: operator-volume
          resources:
            requests:
              cpu: "500m"
              memory: "512Mi"
            limits:
              cpu: 2
              memory: "2Gi"
          securityContext:
            capabilities:
              drop:
              - ALL
            privileged: false
            readOnlyRootFilesystem: false
            allowPrivilegeEscalation: false
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      volumes:
      - emptyDir: {}
        name: operator-volume
