config-adp/v12.1.0.1-local/contour-httpproxy-analytics.yaml
---
# Analytics Ingestion Endpoint
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: analytics-ai-endpoint
  namespace: apic
spec:
  virtualhost:
    fqdn: ai.apic.talos-pc.zebra-cloud.net
    tls:
      secretName: analytics-ai-endpoint
  routes:
  - services:
    - name: analytics-mtls-gw
      port: 4443
      protocol: tls
      validation:
        caSecret: analytics-ca
        subjectName: analytics-mtls-gw.apic.svc.cluster.local
