config-adp/v12.1.0.1-local/contour-httpproxy-devportal.yaml
---
# DevPortal Admin API
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: devportal-admin
  namespace: apic
spec:
  virtualhost:
    fqdn: admin-devportal-apic.demo01.mea-presales.org
    tls:
      secretName: devportal-admin-endpoint
  routes:
  - services:
    - name: devportal-proxy
      port: 4443
      protocol: tls
      validation:
        caSecret: devportal-ca
        subjectName: devportal-proxy.apic.svc.cluster.local
---
# DevPortal Web (Developer Portal UI)
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: devportal-web
  namespace: apic
spec:
  virtualhost:
    fqdn: devportal-apic.demo01.mea-presales.org
    tls:
      secretName: devportal-ui-endpoint
  routes:
  - services:
    - name: devportal-devportal
      port: 8443
      protocol: tls
      validation:
        caSecret: devportal-ca
        subjectName: devportal-devportal.apic.svc.cluster.local
